objects/BCContract__c.object
<CustomObject>
    <description>Defines a contract between a Grower and an Importer to ship using
 * a Shipper, paying a set unit price. The unit price is multiplied by
 * a penality factor proportional to the deviation from the min and max
 * negociated temperatures for the shipment.</description>
    <fields>
        <fullName>Grower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grower</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Importer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Importer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipper</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>arrivalDateTime__c</fullName>
        <label>arrivalDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>minPenaltyFactor__c</fullName>
        <label>minPenaltyFactor</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>minTemp__c</fullName>
        <label>minTemp</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>msxTemp__c</fullName>
        <label>msxTemp</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unitPrice__c</fullName>
        <label>unitPrice</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>BCContract</label>
    <nameField>
        <label>ContractId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BCContracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>